--- a/src/android/cordova-plugin-ibeacon.gradle
+++ b/src/android/cordova-plugin-ibeacon.gradle
@@ -4,6 +4,7 @@ repositories{
 
 dependencies {
     compile 'org.altbeacon:android-beacon-library:2.17.1'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
 
 android {
