--- a/plugin.xml
+++ b/plugin.xml
@@ -80,7 +80,9 @@
             <feature name="LocationManager" >
                 <param name="android-package" value="com.unarin.cordova.beacon.LocationManager"/>
             </feature>
+            <preference name="GradlePluginGoogleServicesVersion" value="4.0.0" />
         </config-file>
+        
 
         <config-file target="app/src/main/AndroidManifest.xml" parent="/manifest">
 			<uses-permission android:name="android.permission.BLUETOOTH" />
@@ -100,25 +102,6 @@
 					<action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
 				</intent-filter>
 			</receiver>
-            <!-- <receiver android:name="com.unarin.cordova.beacon.StartupBroadcastReceiver" >
-                <intent-filter>
-                    <action android:name="android.intent.action.BOOT_COMPLETED" />
-                    <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                    <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-                </intent-filter>
-            </receiver> -->
-            <!-- <service android:enabled="true"
-                     android:exported="true"
-                     android:isolatedProcess="false"
-                     android:label="iBeacon"
-                     android:name="org.altbeacon.beacon.service.BeaconService">
-            </service> -->
-            <!-- <service android:enabled="true"
-                     android:exported="true"
-                     android:isolatedProcess="false"
-                     android:label="BackgroundBeaconService"
-                     android:name="com.unarin.cordova.beacon.BackgroundBeaconService">
-            </service> -->
             <service android:name="org.altbeacon.beacon.service.BeaconService">
                 <meta-data android:name="longScanForcingEnabled" android:value="true"/>
             </service>
@@ -132,18 +115,17 @@
             </service>
         </config-file>
 
-        
-        <edit-config file="app/src/main/AndroidManifest.xml" target="/manifest/application" mode="merge">
-            <application android:name="com.e2bfbb675eb7.www.Main" android:usesCleartextTraffic="true"/>
+        <edit-config file="app/src/main/AndroidManifest.xml" target="/manifest/application" mode="merge" xmlns:android="http://schemas.android.com/apk/res/android">
+            <application android:name="com.ibeaconbg.www.Main" android:usesCleartextTraffic="true"/>
         </edit-config>
         <edit-config file="app/src/main/AndroidManifest.xml" target="/manifest/application/activity[@android:screenOrientation='portrait']" mode="merge">
-            <activity android:launchMode="singleInstance" android:name="com.e2bfbb675eb7.www.MainCordovaActivity"/>
+            <activity android:launchMode="singleInstance" android:name="com.ibeaconbg.www.MainCordovaActivity"/>
         </edit-config>
 		
         <framework src="src/android/cordova-plugin-ibeacon.gradle" custom="true" type="gradleReference" />
 
-        <source-file src="src/android/Main.java" target-dir="com/e2bfbb675eb7/www" />
-        <source-file src="src/android/MainCordovaActivity.java" target-dir="com/e2bfbb675eb7/www" />
+        <source-file src="src/android/Main.java" target-dir="com/ibeaconbg/www" />
+        <source-file src="src/android/MainCordovaActivity.java" target-dir="com/ibeaconbg/www" />
 
         <source-file src="src/android/LocationManager.java" target-dir="src/com/unarin/cordova/beacon" />
         <source-file src="src/android/IBeaconServiceNotifier.java" target-dir="src/com/unarin/cordova/beacon" />
