--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   "homepage": "https://github.com/petermetz/cordova-plugin-ibeacon",
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
-    "@commitlint/config-conventional": "^7.0.1",
-    "husky": "^2.2.0"
+    "@commitlint/config-conventional": "^7.0.1"
   },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }  
+    }
+  },
+  "dependencies": {
+    "xml2js": "^0.4.23"
   }
 }
